# pyopenrefine

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
pyopenrefine/: __init__.py
tests/: test_openrefine.py
